--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "sweet-pumpkins",
-  "version": "0.1.0",
-  "homepage": "http://soirs.github.io/",
-  "private": true,
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-input-range": "^1.3.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "gh-pages": "^1.1.0"
-  }
+	"name": "sweet-pumpkins",
+	"version": "0.1.0",
+	"homepage": "http://soirs.github.io/",
+	"private": true,
+	"dependencies": {
+		"npm-check-updates": "^3.0.8",
+		"react": "^16.8.4",
+		"react-dom": "^16.8.4",
+		"react-input-range": "^1.3.0",
+		"react-router-dom": "^4.3.1",
+		"react-scripts": "2.1.8"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"update": "yarn add npm-check-updates && ncu -u && yarn && yarn upgrade && ncu -u && yarn outdated",
+		"deploy": "gh-pages -d build"
+	},
+	"devDependencies": {
+		"gh-pages": "^2.0.1"
+	}
 }
